add event buttonRollDice

--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
                             <p class="scorePlayerOne">43</p>
                         </div>
                     </div>
-                    <div
-                        class="dice col col-4 align-self-end d-flex justify-content-center align-items-center"
-                    >
-                        <p>1</p>
+                    <div class="dice col col-4 align-self-end">
+                        <img />
                     </div>
                     <div class="playerTwo col col-md-4">
                         <p>player 2</p>
@@ -83,7 +81,7 @@
                     </div>
                     <div class="current_button">
                         <button
-                            class="btn button d-flex align-items-center m-0"
+                            class="btn button buttonRollDice d-flex align-items-center m-0"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
