complete buttonRollDice event and add function changePlayerActive

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     class="container d-flex justify-content-around text-center"
                 >
                     <div class="playerOne col col-md-4">
-                        <p>player 1</p>
+                        <p id="playerOne">player 1</p>
                         <div class="score">
                             <p class="scorePlayerOne">43</p>
                         </div>
@@ -63,7 +63,7 @@
                         <img />
                     </div>
                     <div class="playerTwo col col-md-4">
-                        <p>player 2</p>
+                        <p id="playerTwo">player 2</p>
                         <div class="score">
                             <p class="scorePlayerTwo">43</p>
                         </div>
@@ -77,7 +77,11 @@
                 >
                     <div class="current col col-md-4">
                         <p>Current</p>
-                        <div><p class="currentNumber">11</p></div>
+                        <div>
+                            <p class="currentNumber" id="currentNumberOne">
+                                11
+                            </p>
+                        </div>
                     </div>
                     <div class="current_button">
                         <button
@@ -126,7 +130,11 @@
                     </div>
                     <div class="current col col-md-4">
                         <p>Current</p>
-                        <div><p class="currentNumber">11</p></div>
+                        <div>
+                            <p class="currentNumber" id="currentNumberTwo">
+                                11
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
