--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <p class="p-2 mb-0">ROLL DICE</p>
                         </button>
                         <button
-                            class="btn button d-flex align-items-center m-0"
+                            class="btn button buttonHold d-flex align-items-center m-0"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
