some last improvements

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           <div class="playerOne col col-md-4">
             <p id="playerOne">player 1</p>
             <div class="score">
-              <p class="scorePlayerOne">43</p>
+              <p class="scorePlayerOne">0</p>
             </div>
           </div>
           <div class="dice col col-4 align-self-end">
-            <img />
+            <img src="images/dice-6.jpg" />
           </div>
           <div class="playerTwo col col-md-4">
             <p id="playerTwo">player 2</p>
             <div class="score">
-              <p class="scorePlayerTwo">43</p>
+              <p class="scorePlayerTwo">0</p>
             </div>
           </div>
         </div>
@@ -92,17 +92,17 @@
         <!----------------- current player & roll dice buttons  ----------------->
 
         <div
-          class="container d-flex justify-content-around text-center m-5 p-5"
+          class="container d-flex justify-content-around text-center mt-5 mb-5 p-5"
         >
           <div class="current col col-md-4">
             <p>Current</p>
             <div>
-              <p class="currentNumber" id="currentNumberOne">11</p>
+              <p class="currentNumber" id="currentNumberOne">0</p>
             </div>
           </div>
-          <div class="current_button">
+          <div class="current_button d-flex flex-column">
             <button
-              class="btn button buttonRollDice d-flex align-items-center m-0"
+              class="btn button buttonRollDice d-flex align-items-center m-0 align-self-center"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -122,7 +122,10 @@
               </svg>
               <p class="p-2 mb-0">ROLL DICE</p>
             </button>
-            <button class="btn button buttonHold d-flex align-items-center m-0">
+
+            <button
+              class="btn button buttonHold d-flex align-items-center m-0 align-self-center"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="29"
@@ -146,7 +149,7 @@
           <div class="current col col-md-4">
             <p>Current</p>
             <div>
-              <p class="currentNumber" id="currentNumberTwo">11</p>
+              <p class="currentNumber" id="currentNumberTwo">0</p>
             </div>
           </div>
         </div>
